<resources>
    <string name="app_name">JGI</string>

    //Signup resources
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="email">Email</string>
    <string name="signup_password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="signup_button">Create Account</string>
    <string name="login_link">Have an account?Login</string>

    //Signin resources
    <string name="title_activity_login">Sign in</string>
    <!--<string name="email">Email</string>-->
    <string name="signin_password">Password</string>
    <string name="login_button">Login</string>
    <string name="recover_password">Forgot Password?</string>

    //profile settings resources
    <string name="gym_location">e.g Langata Ngei II</string>
    <string name="dob">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="just_gym_it">Just gym it</string>
    <string-array name="gym_locations_array">
        <item></item>
        <item>Thika</item>
        <item>Karen</item>
        <item>Utawala</item>
        <item>Langata</item>
    </string-array>
    <string name="dobpicker">Date Picker</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //googlemaps API
    <string name="google_maps_API_key">AIzaSyBmOQw7ris5VEMQPTT3yCa2S69GqnekUHE</string>
    <string name="maps">Maps</string>

    //NavigationMenu
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_branches">Gym Branches</string>
    <string name="title_activity_workouts">Workouts</string>

</resources>
