<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/parent_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Just gym it"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstname"
            android:text="@string/first_name"
            android:padding="@dimen/signup_signin_padding"
            android:textSize="@dimen/signup_signin_textsize"
            android:layout_marginTop="@dimen/signup_signin_margintop"
            android:layout_marginBottom="@dimen/signup_signin_marginbottom"
            android:background="@drawable/roundedcorner_textview"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastname"
            android:text="@string/last_name"
            android:padding="@dimen/signup_signin_padding"
            android:textSize="@dimen/signup_signin_textsize"
            android:layout_marginBottom="@dimen/signup_signin_marginbottom"
            android:background="@drawable/roundedcorner_textview"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:text="@string/email"
            android:padding="@dimen/signup_signin_padding"
            android:textSize="@dimen/signup_signin_textsize"
            android:layout_marginBottom="@dimen/signup_signin_marginbottom"
            android:background="@drawable/roundedcorner_textview"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signuppassword"
            android:text="@string/signup_password"
            android:padding="@dimen/signup_signin_padding"
            android:textSize="@dimen/signup_signin_textsize"
            android:layout_marginBottom="@dimen/signup_signin_marginbottom"
            android:background="@drawable/roundedcorner_textview"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/retypepassword"
            android:text="@string/retype_password"
            android:padding="@dimen/signup_signin_padding"
            android:textSize="@dimen/signup_signin_textsize"
            android:layout_marginBottom="@dimen/signup_signin_marginbottom"
            android:background="@drawable/roundedcorner_textview" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signupbutton"
            android:text="@string/signup_button"
            android:background="@drawable/roundedcorner_textview"
            android:layout_marginTop="@dimen/signup_signin_margintop"
            android:layout_marginBottom="@dimen/signup_signin_marginbottom"
            android:backgroundTint="@color/material_grey_400"
            android:onClick="signupClicked"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_link"
            android:id="@+id/login_link"
            android:textAlignment="center"

            android:onClick="loginLinkClicked"/>
    </LinearLayout>

</LinearLayout>